syntax = "proto3";
option java_multiple_files = true;
package ru.oshokin.store;

message RolesRequest {
     string name = 1;
}

message RolesResponse {
     int32 id = 1;
     string name = 2;
}

service RolesService {
    rpc getRoles(RolesRequest) returns (RolesResponse);
}